--- a/components/game/styles.css
+++ b/components/game/styles.css
@@ -6,5 +6,29 @@
 
 .header {
   display: grid;
+  grid-template-areas: ". players leave .";
   grid-template-columns: minmax(10px, 5vw) 6rem 1fr 6rem minmax(10px, 5vw);
+}
+
+@media screen and (max-width: 40rem) {
+  .header {
+    display: grid;
+    grid-template-areas:
+      ". players ."
+      ". leave leave";
+
+    grid-template-columns: 0.5rem auto 0.5rem;
+  }
+
+  .players {
+    grid-area: players;
+  }
+
+  .leave-btn {
+    grid-area: leave;
+    grid-column-start: 2 / -1;
+    justify-self: end;
+    margin-top: 1rem;
+    margin-right: 0.5rem;
+  }
 }
